// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaFrame renders empty 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-hwwEjo DAKUg"
      >
        <table
          class="sc-kPVwWT pOTGP"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-kfGgVZ fpSMyT table-row"
            >
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="sc-kPVwWT pOTGP"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-kfGgVZ fpSMyT table-row"
            >
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders empty for Neo4j >= 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-hwwEjo DAKUg"
      >
        <table
          class="sc-kPVwWT pOTGP"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                Index Name
              </th>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                Type
              </th>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                Uniqueness
              </th>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                EntityType
              </th>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                LabelsOrTypes
              </th>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                Properties
              </th>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                State
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-kfGgVZ fpSMyT table-row"
            >
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              >
                None
              </td>
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              />
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              />
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              />
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              />
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              />
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              />
            </tr>
          </tbody>
        </table>
        <table
          class="sc-kPVwWT pOTGP"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-kfGgVZ fpSMyT table-row"
            >
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders results for Neo4j < 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-hwwEjo DAKUg"
      >
        <table
          class="sc-kPVwWT pOTGP"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-kfGgVZ fpSMyT table-row"
            >
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              >
                 ON :Movie(released) ONLINE 
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="sc-kPVwWT pOTGP"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-esjQYD eCulGm table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-kfGgVZ fpSMyT table-row"
            >
              <td
                class="sc-kIPQKe hyTQUe table-properties"
              >
                 ON ( book:Book ) ASSERT book.isbn IS UNIQUE
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;
